docs update + scrollbar style fix

--- a/static/style/scss/desk.scss
+++ b/static/style/scss/desk.scss
@@ -303,6 +303,7 @@ main{
     overflow-y: auto;
     padding-top: 10px;
     background-color: var(--theme-bg);
+    scrollbar-color: #ccc var(--theme-bg);
     &::-webkit-scrollbar{
         background-color: var(--theme-bg);
         height: 10px;
